--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ header {
     margin: 0 10% 0 7%;
 }
 
+li {
+    display: inline;
+}
 .main-container {
     display: grid;
     grid-template-columns: auto auto auto;
