--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ header {
 #container-3,
 #container-4,
 #container-5,
-#container-6 {
+#container-6,
+#container-7{
 
     border-radius: 10px;
     box-shadow: 0px 15px 30px rgb(0 0 0 / 15%);
