--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,27 @@
 body{
     background-color: #fff;
     color:rgba(117, 117, 117, 0.89);
+    line-height: 1.5;
 }
 
 header {
     text-align: center;
-    margin: 0 10% 0 7%;
+    margin: 5% 10% 0 7%;
+}
+
+h1{
+    font-size: 3em;
+}
+
+h2 {
+    font-size: 1.5em;
+    margin-bottom: 5%;
+}
+
+ul {
+    list-style-position: inside;
+    list-style: square;
+    margin-left: 2%;
 }
 
 .main-header{
@@ -37,6 +53,7 @@ nav{
 .main-item{
     text-align: center;
     padding: 20px;
+    height: 90%;
 }
 
 .info {
