--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ ol {
 }
 
 .nfl{
-    margin-left:7%;
+    margin-left:2%;
+    position:fixed;
 }
 
 .main-header{
@@ -44,6 +45,7 @@ nav{
 .nav {
     display: inline;
     margin-right: 2%;
+    
 }
 
 .main-container {
