--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,12 @@ ul {
 ol {
     list-style-type: lower-roman;
 }
-li :hover{
+
+. nfl li :hover{
     background-color: gray;
     color: #fff;
 }
+
 .nfl{
     margin-left:2%;
     position:fixed;
