--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
+
+html{
+    background: url("../img/white1.jpg") no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+     
+}
+
 body{
-    background-color: #fff;
+    /* background-color: #fff; */
+    /* background-image: url("../img/white1.jpg"); */
     color:rgba(117, 117, 117, 0.89);
     line-height: 1.5;
 }
