--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
 body{
     /* background-color: #fff; */
     /* background-image: url("../img/white1.jpg"); */
-    color:rgba(117, 117, 117, 0.89);
+    color:rgba(238, 238, 238, 0.89);
     line-height: 1.5;
 }
 
@@ -84,6 +84,7 @@ nav{
 }
 
 .main-item{
+    
     text-align: center;
     padding: 20px;
     height: 90%;
@@ -105,7 +106,7 @@ nav{
 #container-10{
     border-radius: 10px;
     box-shadow: 0px 15px 30px rgb(0 0 0 / 15%);
-    background-color: #fff;
+    background-color: rgba(49, 86, 116, 0.651);
 }
 
 #container-7{
